--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,10 @@
     </div>
     <hr>
     <div class="container">
-        <div id="enlace"></div>
+        <div id="enlace2"></div>
     </div>
     <script type="text/babel" src="main.js"></script>
     <script type="text/babel" src="enlace.js"></script>
+    <script type="text/babel" src="enlace2.js"></script>
 </body>
 </html>
